--- a/scss/functions/_get-color.scss
+++ b/scss/functions/_get-color.scss
@@ -8,18 +8,12 @@
   // if they are not valid warn 'Invalid color type or level' and return null
   // null is a special value in Sass that means nothing, and it is used to represent the absence of a value, you need to return null if the type or level is not valid
 
-  // $hexColor: map.get(map.get($colors, $type), $level);
-  // @if ($hexColor != null) {
-  //   @return $hexColor;
-  // } @else {
-  //   @warn "Invalid color type or level";
-  // }
-  // @return null;
-
-  @if (map.has-key($colors, $type, $level)) {
-    @return map.get(map.get($colors, $type), $level);
-  } @else {
-    @warn "Invalid color type or level";
-    @return null;
+  @if (map.has-key($colors, $type)) {
+    $typeMap: map.get($colors, $type);
+    @if (map-has-key($typeMap, $level)) {
+      @return map.get($typeMap, $level);
+    }
   }
+  @warn "Invalid color type or level";
+  @return null;
 }
