--- a/scss/functions/_get-color.scss
+++ b/scss/functions/_get-color.scss
@@ -12,8 +12,12 @@
     $typeMap: map.get($colors, $type);
     @if (map.has-key($typeMap, $level)) {
       @return map.get($typeMap, $level);
+    } @else {
+      @warn "Invalid color level";
+      @return null;
     }
+  } @else {
+    @warn "Invalid color type";
+    @return null;
   }
-  @warn "Invalid color type or level";
-  @return null;
 }
